# mr_h4shtag

./: CONTRIBUTING.md  README.md  SUPPORT.md  cli.py  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/dashboard/: dashboard.html
data/dashboard/static/: dashboard.js  styles.css
data/templates/: report_template.html
data/training_data/: scan_data.json  threat_intel.json
docs/: conf.py  usage.rst
mr_h4shtag/: __init__.py
mr_h4shtag/core/: auth.py  config.py  database.py  logger.py  safe.py
mr_h4shtag/modules/: api_server.py  cloud_storage.py  crawler.py  integrations.py  payloads.py  reporting.py  threat_intel.py  training.py  visualization.py
mr_h4shtag/modules/defensive/: waf.py
mr_h4shtag/modules/exploitation/: exploit.py
mr_h4shtag/modules/scanners/: ai_scanner.py  api_rate_limit.py  auth_bypass.py  brute_force.py  cors.py  csrf.py  file_upload.py  graphql.py  idor.py  infra.py  lfi.py  misconfig.py  rce.py  redirect.py  session_hijack.py  sqli.py  ssrf.py  ssti.py  subdomain.py  websocket.py  xss.py  xxe.py
mr_h4shtag/utils/: network.py  parser.py
tests/: test_arbn.py  test_auth.py
